# EpiForecast-MX-Registro

./: .pre-commit-config.yaml  Guia-Patente.tex  LICENSE  MANIFEST.txt  Makefile  README.md  README_PROYECTO.md  epi.py  pyproject.toml  requirements.txt
config/: base.yaml
config/data/: preprocessing.yaml
config/features/: feature_engineering.yaml
config/infrastructure/: logging.yaml
config/models/: deepar.yaml  ensemble.yaml  nbglm.yaml  prophet.yaml  stacking.yaml
config/visualization/: plots.yaml
docs/model_cards/: deepar.md  ensemble.md  nbglm.md  prophet.md  stacking.md
docs/research/: INFORME_ARQUITECTURA_MULTIMODELO.md
epi_modules/: __init__.py  engine.py  intent.py  theme.py
epi_modules/features/: __init__.py  ai_chat.py  dashboard.py  data_cache.py  data_explorer.py  forecast_viewer.py  knowledge_base.py  model_browser.py  model_comparison.py
epi_modules/views/: __init__.py  approval.py  banner.py  common.py  health.py  help_menu.py  targets.py
scripts/: actualiza_barra_fechas.py  actualiza_semanal.sh  avance5_modelo_final.py  build_dengue_deepar_regiones.py  build_dengue_forecast_web.py  build_dengue_gallery.py  build_dengue_web.py  build_epibot_zoom.py  build_neuro_gallery.py  build_patent_bundle.sh  build_tableau.py  build_web_knowledge.py  ci_process_boletines.py  compara_metricas.py  compara_modelos.py  compliance_check.py  dengue_pronostico_nino.py  dengue_showcase_charts.py  descarga_inegi.py  eda_dengue_charts.py  entrena.py  entrena_sagemaker.py  excel_produccion_charts.py  excel_produccion_fmt.py  extrae_dengue.py  extrae_dengue_a9091.py  filtra_padecimiento.py  genera_bitacora.py  genera_donas_motores.py  genera_paneles_barras_prod.py  genera_paneles_barras_semana.py  genera_paneles_zoom.py  genera_reporte.py  genera_reporte_avance5.py  genera_tabla_produccion.py  genera_validacion_semanal.py  get_dataset.py  imss.sh  limpieza_dataset.py  mapea.py  (+9 more)
scripts/infra/: setup_wsl.sh
scripts/research/: dengue_backtest.py  dengue_backtest_regional.py  dengue_bridge2014.py  dengue_climate_test.py
scripts/templates/: reporte_resultados.tmpl.html
src/epiforecast/: __init__.py  cli.py  constants.py
src/epiforecast/data/: boletin.py  enso.py
src/epiforecast/data/extraction/: dengue_extractor.py  dengue_historico.py  dengue_historico_a9091.py  dengue_validation.py  extraction_pipeline.py  merger.py  merger_interactive.py  pdf_extractor.py
src/epiforecast/data/ingestion/: inegi.py  inegi_constants.py  inegi_utils.py
src/epiforecast/data/loaders/: __init__.py
src/epiforecast/data/preprocessing/: cleaner.py  filter.py  imputation.py  transformer.py
src/epiforecast/evaluation/: metrics.py  real_eval.py
src/epiforecast/features/: demographic.py
src/epiforecast/models/: __init__.py  base.py  factory.py  forecast_guards.py  prediction.py
src/epiforecast/models/deepar/: __init__.py  cross_validator.py  model.py
src/epiforecast/models/ensemble/: __init__.py  feature_builder.py  helpers.py  model.py  oof_residuals.py  parallel_engine.py  weight_optimizer.py  xgb_direct.py  xgb_tuner.py
src/epiforecast/models/nbglm/: __init__.py  model.py
src/epiforecast/models/prophet/: __init__.py  cross_validator.py  data_prep.py  model.py  prophet_compat.py  tuner.py
src/epiforecast/models/stacking/: __init__.py  experts.py  meta_learner.py  model.py
src/epiforecast/pipelines/: __init__.py
src/epiforecast/utils/: cohorts.py  config.py  dataframe_helpers.py  mlflow_logger.py  model_metadata.py  paths.py
src/epiforecast/visualization/: avance5_charts.py  avance5_data.py  avance5_metric_charts.py  avance5_panels.py  avance5_tables.py  base.py  chart_annotations.py  chart_constants.py  chart_renderer.py  comparison_bars.py  comparison_bars_helpers.py  comparison_builders.py  comparison_config.py  comparison_css.py  comparison_html.py  comparison_metrics.py  comparison_panels.py  comparison_plots.py  comparison_prod_bars.py  comparison_report.py  eda_plots.py  eda_summaries.py  eda_types.py  forecast_chart.py  forecast_plots.py  inegi_plots.py  inegi_tables.py  report_tables.py  reporters.py  series_plots.py  web_theme.py
tests/: conftest.py
tests/integration/: test_deepar_smoke.py  test_pipeline_e2e.py  test_prophet_smoke.py
tests/unit/: test_boletin_loader.py  test_constants.py  test_forecast_guards.py  test_nbglm.py  test_produccion_dengue.py  test_real_eval.py  test_reselect_motor_2026.py
tests/unit/data/: test_cleaner.py  test_dengue_extractor.py  test_dengue_historico.py  test_dengue_historico_a9091.py  test_extraction_pipeline.py  test_filter.py  test_imputation.py  test_inegi.py  test_merger.py  test_pdf_extractor.py  test_transformer.py
tests/unit/evaluation/: test_metrics.py
tests/unit/features/: test_demographic.py
tests/unit/models/: conftest.py  test_cross_validator.py  test_deepar_cohort.py  test_deepar_cv.py  test_ensemble_helpers.py  test_ensemble_model.py  test_factory.py  test_oof_residuals.py  test_parallel_engine.py  test_prediction.py  test_prophet_model.py  test_stacking_model.py  test_tuner.py  test_weight_optimizer.py  test_xgb_direct.py
tests/unit/utils/: test_cli.py  test_cohorts.py  test_dataframe_helpers.py  test_mlflow_logger.py  test_model_metadata.py  test_paths.py
tests/unit/visualization/: test_avance5_charts.py  test_avance5_tables.py  test_base.py  test_chart_annotations.py  test_chart_constants.py  test_comparison_bars.py  test_comparison_builders.py  test_comparison_html.py  test_comparison_plots.py  test_comparison_report.py  test_eda_plots.py  test_eda_summaries.py  test_forecast_chart.py  test_forecast_plots.py  test_inegi_plots.py  test_inegi_tables.py  test_report_tables.py  test_reporters.py  test_series_plots.py
