[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "epiforecast-mx"
version = "2.0.0"
description = "Sistema de pronóstico epidemiológico para Depresión (F32), Parkinson (G20) y Alzheimer (G30) en México, desarrollado en colaboración con el IMSS."
authors = [
  { name = "Javier Augusto Rebull Saucedo" },
  { name = "Juan Carlos Pérez Nava" },
  { name = "Luis Gerardo Sánchez Salazar" },
]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = "~=3.12.0"

dependencies = [
    "pandas>=2.2,<3.0",
    "numpy>=1.26,<3.0",
    "prophet>=1.1,<2.0",
    "cmdstanpy>=1.2,<2.0",
    "scikit-learn>=1.4,<2.0",
    "joblib>=1.3,<2.0",
    "tqdm>=4.66,<5.0",
    "matplotlib>=3.8,<4.0",
    "seaborn>=0.13,<1.0",
    "geopandas>=0.14,<2.0",
    "scipy>=1.13,<2.0",
    "omegaconf>=2.3,<3.0",
    "loguru>=0.7,<1.0",
    "camelot-py[cv]>=0.11,<1.0",
    "pypdf>=4.0,<5.0",
    "pdfplumber>=0.10,<1.0",
    "reportlab>=4.1,<5.0",
    "rich>=13.7,<15.0",
    "openpyxl>=3.1,<4.0",
    "requests>=2.31,<3.0",
    "boto3>=1.34,<2.0",
    "typer>=0.9,<1.0",
    "google-generativeai>=0.8,<1.0",
    "gluonts[torch]>=0.15,<1.0",
    "xgboost>=2.0,<3.0",
    "lightgbm>=4.3,<5.0",
    "statsmodels>=0.14,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=4.1,<6.0",
    "pytest-xdist>=3.5,<4.0",
    "ruff==0.14.10",
    "mypy>=1.8,<2.0",
    "pandas-stubs>=2.1,<3.0",
    "types-PyYAML>=6.0,<7.0",
    "types-requests>=2.31,<3.0",
    "pre-commit>=3.6,<4.0",
    "ipykernel>=6.29,<7.0",
]
mlflow = [
    "mlflow>=2.10,<3.0",
]
dvc = [
    "dvc[s3]>=3.40,<4.0",
]
extraction = [
    "camelot-py[cv]>=0.11,<1.0",
    "opencv-python-headless>=4.9,<5.0",
    "pypdf>=4.0,<5.0",
    "pdfplumber>=0.10,<1.0",
    "pandas>=2.2,<3.0",
    "boto3>=1.34,<2.0",
]
scraping = [
    "selenium>=4.20,<5.0",
    "requests>=2.31,<3.0",
    "boto3>=1.34,<2.0",
]
gsheets = [
    "gspread>=6.0,<7.0",
    "google-auth>=2.0,<3.0",
    "pandas>=2.2,<3.0",
]
sagemaker = [
    "sagemaker>=2.200,<3.0",
    "xgboost>=2.0,<3.0",
    "torch>=2.2,<3.0",
]

[project.scripts]
# La CLI interactiva se instala como `epi` (consola EPI). El entrenamiento y la
# orquestacion se ejecutan via `python -m scripts.<modulo>` o `make <target>`
# (scripts/ no es un paquete instalable bajo flit, por eso no se expone aqui).
epi = "epiforecast.cli:main"

# ─── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 99
target-version = "py312"
src = ["src"]
include = ["pyproject.toml", "src/**/*.py", "scripts/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
extend-select = [
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RET",    # flake8-return
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # function call in default arg (needed for DI)
]

[tool.ruff.lint.isort]
known-first-party = ["src", "epiforecast"]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"epi.py" = ["E402"]
"epi_modules/*" = ["E402"]
"notebooks/*" = ["ERA", "E402", "E722", "E741", "F841", "N803", "N806", "B007", "PTH103", "PTH123", "PTH208"]
"tests/*" = ["B011", "PTH113", "PTH119", "N806", "SIM117", "RET504", "F841"]
"src/epiforecast/data/extraction/*" = ["PTH103", "PTH110", "PTH112", "PTH118", "PTH122", "PTH123", "PTH208", "B007", "B018", "B904", "F841", "N803", "SIM102"]
"src/epiforecast/data/ingestion/*" = ["B023", "B905"]
"src/epiforecast/data/preprocessing/transformer.py" = ["B023", "B905", "ERA001", "N801"]
"scripts/*" = ["PTH118", "PTH123", "SIM102"]
"src/epiforecast/data/preprocessing/imputation.py" = ["B023", "B905", "ERA001", "N801"]
"src/epiforecast/visualization/base.py" = ["PTH118", "B905", "N806", "B024"]
"src/epiforecast/visualization/forecast_chart.py" = ["PTH118", "N806"]
"src/epiforecast/visualization/series_plots.py" = ["PTH118"]
"src/epiforecast/visualization/eda_plots.py" = ["E701"]
"src/epiforecast/visualization/inegi_plots.py" = ["E741"]
"src/epiforecast/visualization/reporters.py" = ["PTH110"]
"src/epiforecast/utils/config.py" = ["N816"]
"src/epiforecast/utils/dataframe_helpers.py" = ["N805"]

# ─── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = false            # pre-commit mypy (v1.14, sin matplotlib) vs local (v1.19)
ignore_missing_imports = true          # needed until all stubs exist
exclude = ["notebooks/", "docs/"]

# matplotlib stubs declaran float donde aceptan Timestamp/datetime en runtime
[[tool.mypy.overrides]]
module = [
    "epiforecast.visualization.chart_renderer",
    "epiforecast.visualization.chart_annotations",
    "epiforecast.visualization.comparison_builders",
    "epiforecast.visualization.comparison_panels",
    "epiforecast.visualization.comparison_metrics",
    "epiforecast.visualization.series_plots",
    "epiforecast.visualization.avance5_charts",
]
disable_error_code = ["arg-type"]

# pandas-stubs overloads estrictos en groupby.apply / DataFrame.concat
[[tool.mypy.overrides]]
module = [
    "epiforecast.data.preprocessing.imputation",
    "epiforecast.data.extraction.pdf_extractor",
    "epiforecast.models.prophet.model",
]
disable_error_code = ["no-any-return", "call-overload", "comparison-overlap"]

# ─── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=src/epiforecast",
    "--cov-report=term-missing",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:pyparsing",
    "ignore::DeprecationWarning:matplotlib",
    # requests 2.32 no reconoce urllib3 2.6 en su version check (cosmético, terceros)
    "ignore:urllib3.*or chardet.*doesn.t match a supported version:Warning",
]

# ─── Coverage ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src/epiforecast"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/visualization/comparison_css.py",
    "*/visualization/comparison_plots.py",
    "*/visualization/comparison_report.py",
    "*/visualization/avance5_tables.py",
    "*/visualization/avance5_charts.py",
    "*/visualization/forecast_plots.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
# Gate de cobertura EJECUTABLE (antes era solo aspiracional). Cobertura actual
# ~70%; el piso se fija con margen para no romper CI ante churn menor, pero
# bloquea la erosion por debajo del umbral.
fail_under = 68

# ─── Flit ─────────────────────────────────────────────────────────────────────
[tool.flit.module]
name = "epiforecast"
